# robotics

ex01/: commands
module2/ex03/sergeikrasilnikov1/: CMakeLists.txt  package.xml
module2/ex04/: colcon_build.txt
module2/ex05/: rosnode_info.txt  rosnode_list.txt
module2/ex06/: cmd_vel.txt
module2/ex08/: rqt_conslole.txt.csv  three_turtles_launch.xml
module2/ex09/full_name_pkg/: CMakeLists.txt  package.xml
module2/ex10/: package.xml  setup.py
module2/ex10/py_pubsub/: text_to_cmd_vel.py
module3/ex01/full_name/: setup.cfg  setup.py
module3/ex01/full_name/install/full_name/share/full_name/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
module3/ex01/full_name_pkg/: CMakeLists.txt
module3/ex02/action_turtle_commands/: package.xml  setup.py
module3/ex02/action_turtle_commands/action_turtle_commands/: action_turtle_client.py  action_turtle_server.py
module3/ex02/action_turtle_commands/action_turtle_commands/action/: MessageTurtleCommands.action
module3/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml
module3/ex03/turtle_cmd_vel.mcap/: metadata.yaml  turtle_cmd_vel.mcap_0.db3
module3/ex04/: doctor.txt
module3/ex05/move_to_goal/: package.xml  setup.py
module4/ex01/: last_transform.txt  transform.txt
module4/ex02/: package.xml  setup.py
module4/ex02/launch/: turtle_tf2_dynamic_frame_demo.launch.py
module4/ex02/learning_tf2_py/: dynamic_frame_tf2_broadcaster.py
module4/ex02/rviz/: carrot.rviz
module4/ex03/: setup.py
module4/ex03/launch/: turtle_tf2_demo.launch.py
module4/ex03/learning_tf2_py/: turtle_tf2_listener.py
module5/ex01/: robot.urdf
module5/ex02/: robot.urdf  robot_display.launch.py
module5/ex05/movements/: package.xml  setup.py
module6/ex04/robot_lidar/: map.sdf  package.xml  setup.py
(+36 files in other folders)
