<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_turtle_commands</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s.krasilnikov2@g.nsu.ru">user</maintainer>
  <license>TODO: License declaration</license>
  <depend>rclpy</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>actions</depend>
  <export>
    <build_type>ament_python</build_type>
    <exec_depend>rosidl_default_generators</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
  </export>
</package>
