<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>full_name</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s.krasilnikov2@g.nsu.ru">user</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>full_name_pkg</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_generators</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <export>
    <build_type>ament_python</build_type>
    <exec_depend>rosidl_default_generators</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
  </export>
</package>
